# Flux

./: .gitignore  README.md  code_gen_engine_env.py  flux_options.proto  requirements.txt  ui_core.proto
CodeGenProjects/: README.md  add_project.sh  generate_web_project.sh
Flux/: .gitignore  README.md  UsefulInfo.md  activate_venv.sh  cat_execute.sh  code_gen_engine_env.py  dashboards_n_market_data_n_strat_executor_core.proto  dashboards_n_pair_strat_engine_core.proto  flux_core.yaml  flux_options.proto  flux_utils.proto  market_data_n_strat_executor_core.proto  pair_strat_engine_n_strat_executor_core.proto  projects_core.proto  remote_development_with_pycharm.md  requirements.txt  strat_executor_n_post_trade_engine_core.proto  trade_core.proto  ui_core.proto  ui_option_utils.proto
Flux/CodeGenProjects/: README.md  add_project.sh  gen_web_project.sh
Flux/CodeGenProjects/addressbook/ProjectGroup/mobile_book/cpp_app/replay/: CMakeLists.txt  add_or_get_container_from_py_cache.cpp  add_or_get_container_from_py_cache.h  config_parser.h  cpp_app_launcher.cpp  cpp_app_semaphore.cpp  cpp_app_semaphore.h  cpp_app_shared_resource.cpp  cpp_app_shared_resource.h  history_manager.h  last_barter_handler.h  last_trade_handler.h  main.cpp  makrket_data_publisher.h  market_depth_handler.h  mobile_book_cache.h  mobile_book_consumer.h  mobile_book_interface.cpp  mobile_book_interface.h  mobile_book_publisher.cpp  mobile_book_publisher.h  mobile_book_publisher_interface.h  mobile_book_shared_memory_data_structure.h  mock_mobile_book_cache.cpp  mock_mobile_book_cache.h  mongo_db_singleton.cpp  mongo_db_singleton.h  queue_handler.h  shared_memory_snapshot.cpp  top_of_book_handler.h
Flux/CodeGenProjects/addressbook/ProjectGroup/mobile_book/cpp_app/webclient/: CMakeLists.txt  main.cpp
Flux/CodeGenProjects/addressbook/ProjectGroup/mobile_book/src/: CMakeLists.txt  main.cpp  mobile_book_web_socket_client.h  mobile_book_web_socket_server.h  serialize_and_deserialize_using_proto2.cpp  serialize_and_deserialize_using_proto2.h  serialize_and_deserialize_using_proto3.cpp  serialize_and_deserialize_using_proto3.h
Flux/CodeGenProjects/addressbook/ProjectGroup/phone_book/src/: CMakeLists.txt  main.cpp  serialize_and_deserialize_using_proto2.cpp  serialize_and_deserialize_using_proto2.h  serialize_and_deserialize_using_proto3.cpp  serialize_and_deserialize_using_proto3.h
Flux/CodeGenProjects/market_data/app/: CMakeLists.txt  README.md  aggregate.py  bar_data_loader.py  get_avg_open_for_symbols.py  ib_api_client.py  market_data_log_analyzer.py  market_data_service_routes_callback_base_native_override.py  market_data_service_routes_callback_beanie_bare_override.py  market_data_service_routes_callback_beanie_native_override.py  market_data_service_routes_callback_cache_bare_override.py  market_data_service_routes_callback_cache_native_override.py  market_data_service_routes_callback_cache_override.py  market_data_service_routes_callback_override.py  pre_agregation.cpp  store_depth_market_data.cpp  store_depth_market_data.h  store_depth_market_data_client.py  store_historical_data_client.py  store_market_data_client.py  store_tick_by_tick_data.py  symbol_overview_loader.py  yahoo_finance_base.py
Flux/CodeGenProjects/market_data/app/md-cpp-app/: CMakeLists.txt
Flux/CodeGenProjects/market_data/app/md-cpp-app/Google_tests/: CMakeLists.txt  MD_Test.cpp
Flux/CodeGenProjects/market_data/app/md-cpp-app/cmake/: FindBoost.cmake  FindMongo.cmake  FindPOCO.cmake  FindProtobuf.cmake  FindRapidJSON.cmake
Flux/CodeGenProjects/market_data/app/md-cpp-app/src/: MD_DepthHandler.h  MD_DepthSingleSide.h  MD_HistoryManager.h  MD_LastTrade.h  MD_LastTradeHandler.h  MD_ManageSubscriptionSymbols.h  MD_MarketDepth.h  MD_MongoDBHandler.h  MD_PreAgregation.cpp  MD_Replay.cpp  MD_TopOfBookPublisher.cpp  MD_TopOfBookPublisher.h  MD_Utils.h  MD_WebSocketServer.h
Flux/CodeGenProjects/market_data/cpp_app/replay/: CMakeLists.txt  history_manager.h  last_trade_handler.h  main.cpp  market_depth_handler.h
Flux/CodeGenProjects/market_data/cpp_app/webclient/: CMakeLists.txt  main.cpp
Flux/CppCodeGenEngine/: AddNewGenerator  makeall
Flux/PyCodeGenEngine/: add_plugin.sh  remove_plugin.sh
PyCodeGenEngine/FluxCodeGenCore/: base_proto_plugin.py  default_web_response.py  extended_protogen_options.py  extended_protogen_plugin.py  flux_options_pb2.py  gen_flux_options_pb2.py  incremental_id_basemodel.py  insertion_imports.py  pb2_import_generator.py  plugin_execute_script.py  trigger_script.py  ui_core_pb2.py
PyCodeGenEngine/PluginDBBinding/: base_db_binding_plugin.py  db_binding_pb2_import_generator.py  db_binding_plugin.py  db_binding_template_plugin.py  insertion_imports.py
PyCodeGenEngine/PluginFastApi/: beanie_fast_api_class_gen_plugin.py  fast_api_class_gen_plugin.py  fastapi_pb2_import_generator.py  fastapi_plugin_execute_script.py  hybrid_beanie_fastapi_plugin.py  insertion_imports.py  sqlmodel_fast_api_class_gen_plugin.py  trigger_script.py
PyCodeGenEngine/PluginJSONSample/: json_sample_gen_plugin.py  json_sample_pb2_import_gen.py  json_sample_plugin_execute_script.py  trigger_script.py
PyCodeGenEngine/PluginJSONSchema/: insertion_imports.py  json_plugin_execute_script.py  json_schema_convert_plugin.py  trigger_script.py
PyCodeGenEngine/PluginJsLayout/: base_js_layout_plugin.py  insertion_imports.py  js_slice_file_gen_plugin.py  js_slice_trigger_script.py  js_store_file_gen_plugin.py  jsx_file_gen_plugin.py  jsx_layout_gen_plugin.py  jsx_layout_trigger_script.py  jsx_plugin_execute_script.py
PyCodeGenEngine/PluginPydentic/: beanie_class_gen_plugin.py  pydantic_class_gen_plugin.py  pydantic_plugin_execute_script.py  (+2 more)
tests/: conftest.py  test_code_gen_engine_env.py
tests/CodeGenProjects/addressbook/ProjectGroup/mobile_book/cpp_app/Google_tests/: CMakeLists.txt  DB_Test.cpp
tests/CodeGenProjects/market_data/cpp_app/Google_tests/: CMakeLists.txt  DB_Test.cpp
tests/ExperimentalTest/global_interpreter_lock/: CMakeLists.txt  main.cpp
tests/ExperimentalTest/sub_interpreter/cpp/: CMakeLists.txt  main.cpp
(+1529 files in other folders)
